--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
+    "lint": "vue-cli-service lint --fix",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
@@ -28,6 +28,7 @@
     "node-sass": "^4.9.2",
     "sass-loader": "^7.0.3",
     "ts-jest": "^23.0.0",
+    "tslint-config-prettier": "^1.15.0",
     "typescript": "^3.0.0",
     "vue-cli-plugin-element": "^1.0.0",
     "vue-template-compiler": "^2.5.17"
